--- a/examples/ur_high_5/ur_high_5.yaml
+++ b/examples/ur_high_5/ur_high_5.yaml
@@ -14,7 +14,11 @@ environment:
         xyz: [-0.55, 0.4, 0.65]
         rpy: [0.0, 0.0, -1.57]
 
-        controller:
+        gripper_controller:
+            addon: gripper_controller
+            rest_position: 0.0
+
+        position_controller:
             addon: position_controller
             rest_position: [-0.07, -0.73, -1.93, -0.36, -0.03, -0.06]
             end_effector_frame: wrist_3_joint
