--- a/examples/ur_high_5/ur_high_5.yaml
+++ b/examples/ur_high_5/ur_high_5.yaml
@@ -1,5 +1,6 @@
 environment:
     terminal_if_any: true
+    
     max_episode_steps: 40
 
     plane:
@@ -21,6 +22,13 @@ environment:
             addon: visual_randomizer
             randomize_color: False
 
+    duck:
+        model: duck_vhacd.urdf
+        xyz: [0.0, 0.3, 0.61]
+
+        object_state_sensor:
+            addon: object_state_sensor
+
     ur5_l:
         model: ur5/ur5_2f.urdf
         xyz: [-0.55, 0.4, 0.65]
@@ -29,17 +37,17 @@ environment:
         2f_gripper_controller:
             addon: 2f_gripper_controller
             rest_position: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-            end_effector_frame: wrist_3_joint
+            end_effector_frame: ee_fixed_joint
 
         position_controller:
             addon: position_controller
             rest_position: [-0.07, -0.73, -1.93, -0.36, -0.03, -0.06]
-            end_effector_frame: wrist_3_joint
+            end_effector_frame: ee_fixed_joint
 
         slap:
             addon: reach_target
             target_position: [0.0, 0.4, 1.3]
-            frame: wrist_3_joint
+            frame: ee_fixed_joint
 
         joint_state:
             addon: joint_state_sensor
@@ -52,12 +60,12 @@ environment:
         controller:
             addon: position_controller
             rest_position: [-0.07, -0.73, -1.93, -0.36, -0.03, -0.06]
-            end_effector_frame: wrist_3_joint
+            end_effector_frame: ee_fixed_joint
 
         3f_gripper_controller:
           addon: 3f_gripper_controller
           rest_position: [[0.0495, 0.0495, 0.0495], [0.0, 0.0, 0.0], [-0.64, -0.64, -0.64], [0.0, 0.0]]
-          end_effector_frame: wrist_3_joint
+          end_effector_frame: ee_fixed_joint
 
         visual_randomizer:
             addon: visual_randomizer
